--- a/index.html
+++ b/index.html
@@ -3,119 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escaneo de Códigos QR y Barras</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f8f9fa;
-        }
-        h1 {
-            color: #343a40;
-            margin-bottom: 20px;
-        }
-        #scanner-container {
-            position: relative;
-            margin-top: 20px;
-            width: 100%;
-            max-width: 500px;
-            height: auto;
-            border: 1px solid #ced4da;
-            background-color: #ffffff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        #video-preview {
-            width: 100%;
-        }
-        #overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%;
-            height: 50%;
-            border: 3px dashed red;
-            pointer-events: none;
-            box-sizing: border-box;
-        }
-        #result {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #ced4da;
-            background-color: #e9ecef;
-            border-radius: 5px;
-            font-size: 1.2em;
-            color: #495057;
-            text-align: center;
-        }
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #007bff;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <title>Escanear Código de Barras</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Escaneo de Códigos QR y Barras</h1>
-    <div id="scanner-container">
-        <video id="video-preview" playsinline></video>
-        <div id="overlay"></div>
+    <div class="scanner-container">
+        <h2>Escanear Código de Barras</h2>
+        <button id="startScan">Iniciar Escaneo</button>
+        <button id="stopScan" style="display:none;">Detener Escaneo</button>
+        <div id="video-container">
+            <video id="video-preview" autoplay></video>
+        </div>
+        <div id="result"></div> <!-- Contenedor para mostrar el resultado del escaneo -->
+        <div id="productInfo"></div> <!-- Contenedor para mostrar la información del producto -->
     </div>
-    <div id="result" style="display: none;">Escaneando...</div>
-    <button id="startScan">Iniciar Escaneo</button>
 
-    <!-- Sonido de "bip" -->
-    <audio id="beep-sound" src="https://www.soundjay.com/button/sounds/button-10.mp3" preload="auto"></audio>
-
-    <!-- Incluye la librería ZXing -->
+    <!-- Incluir ZXing y el sonido de bip -->
     <script src="https://unpkg.com/@zxing/library@latest"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const codeReader = new ZXing.BrowserMultiFormatReader();
-            const videoElement = document.getElementById('video-preview');
-            const beepSound = document.getElementById('beep-sound');
-            const resultElement = document.getElementById('result');
-            let scanning = false;
-
-            document.getElementById('startScan').addEventListener('click', () => {
-                if (!scanning) {
-                    // Actualizar UI para mostrar que se está escaneando
-                    resultElement.innerText = 'Escaneando...';
-                    resultElement.style.display = 'block';
-
-                    codeReader.decodeFromVideoDevice(undefined, 'video-preview', (result, err) => {
-                        if (result) {
-                            beepSound.play(); // Reproduce el sonido de "bip"
-                            resultElement.innerText = 'Último Código Escaneado: ' + result.text;
-                            resultElement.style.display = 'block';
-                            codeReader.reset(); // Detener el escaneo después de encontrar un código
-                            scanning = false;
-                        } else if (err && !(err instanceof ZXing.NotFoundException)) {
-                            console.error('Error al escanear el código:', err);
-                            alert('Error al escanear el código. Intenta nuevamente.');
-                        }
-                    }).catch((err) => {
-                        console.error('Error al acceder a la cámara:', err);
-                        alert('Error al acceder a la cámara. Por favor, verifica los permisos y vuelve a intentarlo.');
-                    });
-                    scanning = true;
-                }
-            });
-        });
-    </script>
+    <audio id="beep-sound" src="https://example.com/beep.mp3" preload="auto"></audio>
+    <script src="app.js"></script>
 </body>
 </html>
